# narrate

./: .gitignore  README.md  install.sh  narrate.toml.example  pyproject.toml
narrate/: __init__.py  cli.py  config.py  parser.py  pipeline.py  voices.py
narrate/engine/: __init__.py  chatterbox.py  elevenlabs.py
tests/: test_cli.py  test_config.py  test_parser.py  test_pipeline.py  test_voices.py
